--- a/load.ini
+++ b/load.ini
@@ -1,10 +1,11 @@
 [phantom]
-address=10.110.40.40:80
+address=10.110.40.88
+port=3000
 
 instances=1000
-rps_schedule=const(1,30s) line(2,400,30s) line(400,1,30s) const(1,30s)
+rps_schedule=const(1,10s) line(2,25,20s) const(25,20s) line(25,2,20s) const(1,10s)
 header_http=1.1
-headers=[Host: ga.dev.kiev.test]
+headers=[Host: maps.api.entrances.des.dev.kiev.test]
         [Connection: close]
-uris=/dg-tilelayer-base-copyright.png
+uris=/2.0/js/?pkg=full
 [autostop] autostop=http(5xx,10%,5s)
